# Isen

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  appveyor.yml
doc/: CMakeLists.txt  Documentation.html  Doxyfile.in  Mainpage.md
ext/: ThirdPartyLegalNotices.txt
ext/mib/: mib.h
include/Isen/: Boundary.h  CommandLine.h  Common.h  Config.h  Kessler.h  Logger.h  MeteoUtils.h  NameList.h  Output.h  Parse.h  Progressbar.h  Solver.h  SolverCpu.h  SolverFactory.h  SolverOpt.h  SolverRef.h  Terminal.h  Timer.h  Type.h
include/Isen/Python/: IsenPython.h  PyLogger.h  PyNameList.h  PyNamelist.h  PyOutput.h  PySolver.h  PyType.h
lib/: CMakeLists.txt  main.cpp
lib/IsenCore/: CMakeLists.txt  CommandLine.cpp  Common.cpp  Kessler.cpp  Logger.cpp  NameList.cpp  Output.cpp  Parse.cpp  Progressbar.cpp  Solver.cpp  SolverCpu.cpp  SolverOpt.cpp  SolverRef.cpp  Terminal.cpp
lib/IsenPython/: CMakeLists.txt  IsenPython.cpp  PyLogger.cpp  PyNameList.cpp  PyNamelist.cpp  PyOutput.cpp  PySolver.cpp
python/: anim.py  example.py  isen_test.py  namelist.m  plot.py  report_experiment1.py  report_experiment2.py  test.py
python/IsenPython/: IsenPythonCxx.pyd  Visualizer.py  __init__.py
test/: CMakeLists.txt  FieldLoader.h  FieldVerifier.h  FileProxy.h  Test.h  Test_Output.cpp  Test_Parser.cpp  Test_Solver.cpp  Test_Terminal.cpp  Test_Verification.cpp  Test_main.cpp
test/data/: namelist.m
